# email_classification_pipeline

./: .gitignore  Makefile  README.md  app_classification.py  dvc.yaml  email.db  params.yaml  pyproject.toml
.dvc/: config
Documents/: MLmodel  conda.yaml  python_env.yaml  python_model.pkl  requirements.txt
docker/: Dockerfile
models/: .gitignore
params/: params.yaml
src/: fast_text_wrapper.py  load_parameters.py  log_config.py  model_monitoring.py  model_selection.py  preprocess_data.py  split_data.py  train.py
src/database/: db_handler.py
src/model/: model_selection.py  preprocess_data.py  split_data.py  train.py
src/report/: model_monitoring.py
src/utils/: load_parameters.py
tests/: test_app.py  test_params.py
webapp/templates/: index.html
